--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,15 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="forgot_pass">Forgot Password?</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="edit_name">Name</string>
+    <string name="edit_email">Email</string>
+    <string name="edit_contact">Contact No</string>
+    <string name="edit_password">Password</string>
+    <string name="back">Back</string>
+    <string name="update">Update</string>
+
 
     <string-array name="emergency_arrays">
         <item>Car accident</item>
